--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -242,6 +242,10 @@ body.full-screen-terminal .terminal {
     content: '\0200B';
     width: 0;
     float: left;
+}
+.terminal-output > div:not(.raw) div::before,
+.terminal span[data-text],
+.cmd span[data-text] {
     display: inline-block;
 }
 .terminal, terminal-output > div:not(.raw) div > span:not(.token):not(.inverted):not(.terminal-inverted):not(.cmd-inverted):not(.terminal-error):not(.emoji),
